--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+blinker==1.4
 certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
@@ -6,25 +7,28 @@ client==0.0.1
 Flask==1.1.1
 Flask-API==1.1
 Flask-Cors==3.0.8
+Flask-DebugTool==0.1.8
 Flask-HTTPAuth==3.3.0
+flask-sqlacodegen==1.1.6.1
 Flask-SQLAlchemy==2.4.0
-futures==3.1.1
 gevent==1.4.0
 greenlet==0.4.15
 idna==2.8
+inflect==2.1.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Naked==0.1.31
 pycparser==2.19
 pycryptodome==3.8.2
+pymssql==2.1.4
 PyMySQL==0.9.3
 PyYAML==5.1.1
 redis==3.3.2
 requests==2.22.0
 shellescape==3.4.1
 six==1.12.0
+sqlacodegen==2.1.0
 SQLAlchemy==1.3.6
-suds==0.4
 urllib3==1.25.3
 Werkzeug==0.15.5
